--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,22 +15,26 @@
         <activity
             android:name=".login.view.main.view.MainActivity"
             android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".login.view.register.view.RegisterActivity"
+            android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".login.view.register.view.RegisterActivity"
-            android:exported="false">
 
         </activity>
 
         <activity
             android:name=".login.view.LoginActivity"
-            android:exported="false">
+            android:exported="true">
+
+
 
         </activity>
 
