--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:theme="@style/Theme.Instagram"
         tools:targetApi="31">
         <activity
-            android:name=".Splash.view.SplashActivity"
+            android:name=".splash.view.SplashActivity"
             android:exported="true">
 
             <intent-filter>
